[build-system]
requires = [
    "hatchling >= 1.10.0",
    "hatch-fancy-pypi-readme >= 22.5.0",
    "incremental >= 22.10.0",
]
build-backend = "hatchling.build"

[project]
name = "Twisted"
dynamic = [
    "version",
    "readme",
    # Remove this when the legacy optional dependency names are removed
    "optional-dependencies",
]
description = "An asynchronous networking framework written in Python"
license = "MIT"
# When updating this value, make sure our CI matrix includes a matching minimum version.
requires-python = ">=3.8.0"
authors = [
    { name = "Twisted Matrix Laboratories", email = "twisted-python@twistedmatrix.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "zope.interface >= 5",
    "constantly >= 15.1",
    "incremental >= 22.10.0",
    "Automat >= 0.8.0",
    "hyperlink >= 17.1.1",
    "attrs >= 21.3.0",
    "typing_extensions >= 3.10.0",
    "twisted-iocpsupport >= 1.0.2, <2; platform_system == 'Windows'",
]

# Switch to this when the legacy optional dependency names are removed
# [project.optional-dependencies]
[tool.hatch.metadata.hooks.custom.optional-dependencies]
# This is list of minimum dependencies required to run the tests.
# The plan is to remove the `test` extra requirement and skip tests that
# depend on them
# To prevent trunk failures we should pin all dev dependencies to minor
# versions.
# We trust semantic versioning and auto-upgrading to a bugfix release
# should be OK.
test = [
    "cython-test-exception-raiser >= 1.0.2, <2",
    "PyHamcrest >= 2",
    "hypothesis >= 6.56",
]

# List of dependencies required to build the documentation and test the
# release scripts and process.
dev-release = [
    "towncrier ~= 23.6",
    "pydoctor ~= 23.4.0",
    "sphinx-rtd-theme ~= 1.2",
    "readthedocs-sphinx-ext ~= 2.2",
    "sphinx >= 6, <7",
]

# All the extra tools used to help with the development process.
dev = [
    "twisted[dev-release]",
    "pyflakes ~= 2.2",
    # TODO: support python-subunit in py3.10 https://github.com/twisted/twisted/issues/10115
    "python-subunit ~= 1.4; python_version < '3.10'",
    "twistedchecker ~= 0.7",
    "coverage >= 6b1, <7",
]

tls = [
    "pyopenssl >= 21.0.0",
    # service_identity 18.1.0 added support for validating IP addresses in
    # certificate subjectAltNames
    "service_identity >= 18.1.0",
    "idna >= 2.4",
]

conch = [
    "cryptography >= 3.3",
    "appdirs >= 1.4.0",
    "bcrypt >= 3.1.3",
]

serial = [
    "pyserial >= 3.0",
    "pywin32 != 226; platform_system == 'Windows'",
]

http2 = [
    "h2 >= 3.0, < 5.0",
    "priority >= 1.1.0, < 2.0",
]

all-non-platform = [
    "twisted[test,tls,conch,serial,http2]",
]

macos-platform = [
    "twisted[all-non-platform]",
    "pyobjc-core",
    "pyobjc-framework-CFNetwork",
    "pyobjc-framework-Cocoa",
]

windows-platform = [
    "twisted[all-non-platform]",
    "pywin32 != 226",
]

osx-platform = [
    "twisted[macos-platform]",
]

gtk-platform = [
    "twisted[all-non-platform]",
    "pygobject",
]

mypy = [
    "twisted[dev,all-non-platform]",
    "mypy==0.981",
    "mypy-zope==0.3.11",
    "mypy-extensions==0.4.3",
    "types-setuptools",
    "types-pyOpenSSL",
]

[project.scripts]
cftp = "twisted.conch.scripts.cftp:run"
ckeygen = "twisted.conch.scripts.ckeygen:run"
conch = "twisted.conch.scripts.conch:run"
mailmail = "twisted.mail.scripts.mailmail:run"
pyhtmlizer = "twisted.scripts.htmlizer:run"
tkconch = "twisted.conch.scripts.tkconch:run"
trial = "twisted.scripts.trial:run"
twist = "twisted.application.twist._twist:Twist.main"
twistd = "twisted.scripts.twistd:run"

[project.urls]
Changelog = "https://github.com/twisted/twisted/blob/HEAD/NEWS.rst"
Documentation = "https://docs.twistedmatrix.com/"
Homepage = "https://twistedmatrix.com/"
Issues = "https://twistedmatrix.com/trac/report"
Source = "https://github.com/twisted/twisted"
Twitter = "https://twitter.com/twistedmatrix"

[tool.hatch.metadata]
# This is here to enable backward compatible extra dependencies
# that are defined using underscores.
allow-ambiguous-features = true

[tool.hatch.version]
source = "code"
path = "src/twisted/__init__.py"
search-paths = ["src"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [
    { path = "README.rst" },
]

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
# Munge links of the form `NEWS <NEWS.rst>`_ to point at the appropriate
# location on GitHub so that they function when the long description is
# displayed on PyPI.
pattern = '`([^`]+)\s+<(?!https?://)([^>]+)>`_'
replacement = '`\1 <https://github.com/twisted/twisted/blob/trunk/\2>`_'
ignore-case = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/twisted",
]
exclude = [
    "*.pxi",
    "*.pyx",
    "build.bat",
]

[tool.hatch.build.targets.sdist]
# This dictates what goes into a sdist tarball.
# As a release tarball, we want to include:
#  - All of the library code.
#  - All the useful documentation (but not the super historic stuff)
#  - All of the test files, so that the tests can be run on an installed copy.
# We do not want to include:
#  - Release management files (e.g. topfiles)
#  - Things only useful when running from a source checkout
include = [
    # Documentation
    "/docs",

    # Library code
    "/src",
    "/CONTRIBUTING.md",
    "/INSTALL.rst",
    "/NEWS.rst",
    "/README.rst",
    "/code_of_conduct.md",

    # Test-running utilities for downstream packagers
    "/.coveragerc",
    "/mypy.ini",
    "/tox.ini",
]

[tool.towncrier]
    package = "twisted"
    package_dir = "src"
    filename = "NEWS.rst"

    [[tool.towncrier.section]]
        path = ""

    [[tool.towncrier.section]]
        path = "conch"
        name = "Conch"

    [[tool.towncrier.section]]
        path = "web"
        name = "Web"

    [[tool.towncrier.section]]
        path = "mail"
        name = "Mail"

    [[tool.towncrier.section]]
        path = "words"
        name = "Words"

    [[tool.towncrier.section]]
        path = "names"
        name = "Names"

    [[tool.towncrier.section]]
        path = "trial"
        name = "Trial"

    [[tool.towncrier.type]]
        directory = "feature"
        name = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bugfixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "doc"
        name = "Improved Documentation"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "removal"
        name = "Deprecations and Removals"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "misc"
        name = "Misc"
        showcontent = false

[tool.black]
target-version = ['py36', 'py37', 'py38']

[tool.isort]
profile = "black"
sections = "FUTURE,STDLIB,ZOPE,OPENSSL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
no_lines_before = "LOCALFOLDER"
known_first_party = "twisted"
known_zope = "zope"
known_openssl = "OpenSSL"
combine_as_imports = true
skip = "src/twisted/logger/__init__.py,src/twisted/internet/reactor.py"

[tool.mypy]
namespace_packages = true
plugins = ["mypy_zope:plugin"]
# Increase our expectations
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
# These are too strict for us at the moment
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
strict_equality = false
# Disable some checks until the effected modules fully adopt mypy

[[tool.mypy.overrides]]
allow_untyped_defs = true
check_untyped_defs = false
module = [
    'twisted._threads.*',
    'twisted.application.app',
    'twisted.application.internet',
    'twisted.application.service',
    'twisted.application.test.test_internet',
    'twisted.conch.*',
    'twisted.cred.*',
    'twisted.enterprise.*',
    'twisted.internet._baseprocess',
    'twisted.internet._dumbwin32proc',
    'twisted.internet._glibbase',
    'twisted.internet._newtls',
    'twisted.internet._pollingfile',
    'twisted.internet._posixserialport',
    'twisted.internet._posixstdio',
    'twisted.internet._producer_helpers',
    'twisted.internet._signals',
    'twisted.internet._threadedselect',
    'twisted.internet._win32serialport',
    'twisted.internet._win32stdio',
    'twisted.internet.address',
    'twisted.internet.asyncioreactor',
    'twisted.internet.cfreactor',
    'twisted.internet.default',
    'twisted.internet.endpoints',
    'twisted.internet.epollreactor',
    'twisted.internet.error',
    'twisted.internet.fdesc',
    'twisted.internet.gireactor',
    'twisted.internet.glib2reactor',
    'twisted.internet.gtk2reactor',
    'twisted.internet.gtk3reactor',
    'twisted.internet.inotify',
    'twisted.internet.iocpreactor.abstract',
    'twisted.internet.iocpreactor.interfaces',
    'twisted.internet.iocpreactor.reactor',
    'twisted.internet.iocpreactor.udp',
    'twisted.internet.kqreactor',
    'twisted.internet.main',
    'twisted.internet.pollreactor',
    'twisted.internet.process',
    'twisted.internet.pyuisupport',
    'twisted.internet.selectreactor',
    'twisted.internet.serialport',
    'twisted.internet.ssl',
    'twisted.internet.test._posixifaces',
    'twisted.internet.test._win32ifaces',
    'twisted.internet.test.connectionmixins',
    'twisted.internet.test.fakeendpoint',
    'twisted.internet.test.modulehelpers',
    'twisted.internet.test.process_helper',
    'twisted.internet.test.reactormixins',
    'twisted.internet.test.test_abstract',
    'twisted.internet.test.test_address',
    'twisted.internet.test.test_asyncioreactor',
    'twisted.internet.test.test_baseprocess',
    'twisted.internet.test.test_default',
    'twisted.internet.test.test_defer_await',
    'twisted.internet.test.test_defer_yieldfrom',
    'twisted.internet.test.test_endpoints',
    'twisted.internet.test.test_epollreactor',
    'twisted.internet.test.test_error',
    'twisted.internet.test.test_fdset',
    'twisted.internet.test.test_filedescriptor',
    'twisted.internet.test.test_gireactor',
    'twisted.internet.test.test_glibbase',
    'twisted.internet.test.test_inlinecb',
    'twisted.internet.test.test_inotify',
    'twisted.internet.test.test_iocp',
    'twisted.internet.test.test_kqueuereactor',
    'twisted.internet.test.test_main',
    'twisted.internet.test.test_newtls',
    'twisted.internet.test.test_pollingfile',
    'twisted.internet.test.test_posixbase',
    'twisted.internet.test.test_posixprocess',
    'twisted.internet.test.test_process',
    'twisted.internet.test.test_protocol',
    'twisted.internet.test.test_resolver',
    'twisted.internet.test.test_serialport',
    'twisted.internet.test.test_sigchld',
    'twisted.internet.test.test_socket',
    'twisted.internet.test.test_stdio',
    'twisted.internet.test.test_tcp',
    'twisted.internet.test.test_testing',
    'twisted.internet.test.test_threads',
    'twisted.internet.test.test_time',
    'twisted.internet.test.test_tls',
    'twisted.internet.test.test_udp',
    'twisted.internet.test.test_udp_internals',
    'twisted.internet.test.test_unix',
    'twisted.internet.test.test_win32events',
    'twisted.internet.test.test_win32serialport',
    'twisted.internet.threads',
    'twisted.internet.tksupport',
    'twisted.internet.udp',
    'twisted.internet.unix',
    'twisted.internet.utils',
    'twisted.internet.win32eventreactor',
    'twisted.internet.wxreactor',
    'twisted.internet.wxsupport',
    'twisted.logger.*',
    'twisted.mail.*',
    'twisted.names.*',
    'twisted.pair.*',
    'twisted.persisted.*',
    'twisted.plugin.*',
    'twisted.plugins.*',
    'twisted.positioning.*',
    'twisted.protocols.amp',
    'twisted.protocols.basic',
    'twisted.protocols.dict',
    'twisted.protocols.finger',
    'twisted.protocols.ftp',
    'twisted.protocols.htb',
    'twisted.protocols.ident',
    'twisted.protocols.loopback',
    'twisted.protocols.memcache',
    'twisted.protocols.pcp',
    'twisted.protocols.policies',
    'twisted.protocols.portforward',
    'twisted.protocols.postfix',
    'twisted.protocols.shoutcast',
    'twisted.protocols.sip',
    'twisted.protocols.socks',
    'twisted.protocols.stateful',
    'twisted.protocols.tls',
    'twisted.protocols.wire',
    'twisted.protocols.test.test_basic',
    'twisted.protocols.test.test_tls',
    'twisted.python.failure',
    'twisted.python.filepath',
    'twisted.python.formmethod',
    'twisted.python.logfile',
    'twisted.python.modules',
    'twisted.python.rebuild',
    'twisted.python.reflect',
    'twisted.python.test.test_components',
    'twisted.python.test.test_constants',
    'twisted.python.test.test_deprecate',
    'twisted.python.test.test_fakepwd',
    'twisted.python.test.test_inotify',
    'twisted.python.test.test_pydoctor',
    'twisted.python.test.test_release',
    'twisted.python.test.test_sendmsg',
    'twisted.python.test.test_shellcomp',
    'twisted.python.test.test_syslog',
    'twisted.python.test.test_systemd',
    'twisted.python.test.test_url',
    'twisted.python.test.test_urlpath',
    'twisted.python.test.test_util',
    'twisted.python.test.test_zipstream',
    'twisted.python.text',
    'twisted.python.threadable',
    'twisted.python.urlpath',
    'twisted.python.usage',
    'twisted.python.util',
    'twisted.python.win32',
    'twisted.python.zipstream',
    'twisted.runner.procmon',
    'twisted.runner.inetd',
    'twisted.runner.test.test_procmon',
    'twisted.runner.test.test_inetdconf',
    'twisted.scripts.*',
    'twisted.spread.*',
    'twisted.tap.*',
    'twisted.test.crash_test_dummy',
    'twisted.test.iosim',
    'twisted.test.mock_win32process',
    'twisted.test.myrebuilder1',
    'twisted.test.myrebuilder2',
    'twisted.test.plugin_basic',
    'twisted.test.plugin_extra1',
    'twisted.test.plugin_extra2',
    'twisted.test.process_tester',
    'twisted.test.process_twisted',
    'twisted.test.ssl_helpers',
    'twisted.test.stdio_test_consumer',
    'twisted.test.stdio_test_halfclose',
    'twisted.test.stdio_test_hostpeer',
    'twisted.test.stdio_test_lastwrite',
    'twisted.test.stdio_test_loseconn',
    'twisted.test.stdio_test_producer',
    'twisted.test.stdio_test_write',
    'twisted.test.stdio_test_writeseq',
    'twisted.test.test_abstract',
    'twisted.test.test_adbapi',
    'twisted.test.test_amp',
    'twisted.test.test_application',
    'twisted.test.test_compat',
    'twisted.test.test_context',
    'twisted.test.test_cooperator',
    'twisted.test.test_defgen',
    'twisted.test.test_dict',
    'twisted.test.test_dirdbm',
    'twisted.test.test_error',
    'twisted.test.test_factories',
    'twisted.test.test_failure',
    'twisted.test.test_fdesc',
    'twisted.test.test_finger',
    'twisted.test.test_formmethod',
    'twisted.test.test_ftp',
    'twisted.test.test_ftp_options',
    'twisted.test.test_htb',
    'twisted.test.test_ident',
    'twisted.test.test_internet',
    'twisted.test.test_iosim',
    'twisted.test.test_iutils',
    'twisted.test.test_lockfile',
    'twisted.test.test_log',
    'twisted.test.test_logfile',
    'twisted.test.test_loopback',
    'twisted.test.test_main',
    'twisted.test.test_memcache',
    'twisted.test.test_modules',
    'twisted.test.test_monkey',
    'twisted.test.test_paths',
    'twisted.test.test_pcp',
    'twisted.test.test_persisted',
    'twisted.test.test_policies',
    'twisted.test.test_postfix',
    'twisted.test.test_process',
    'twisted.test.test_protocols',
    'twisted.test.test_randbytes',
    'twisted.test.test_rebuild',
    'twisted.test.test_reflect',
    'twisted.test.test_roots',
    'twisted.test.test_shortcut',
    'twisted.test.test_sip',
    'twisted.test.test_sob',
    'twisted.test.test_socks',
    'twisted.test.test_ssl',
    'twisted.test.test_sslverify',
    'twisted.test.test_stateful',
    'twisted.test.test_stdio',
    'twisted.test.test_strerror',
    'twisted.test.test_strports',
    'twisted.test.test_task',
    'twisted.test.test_tcp',
    'twisted.test.test_tcp_internals',
    'twisted.test.test_text',
    'twisted.test.test_threadable',
    'twisted.test.test_threadpool',
    'twisted.test.test_threads',
    'twisted.test.test_tpfile',
    'twisted.test.test_twistd',
    'twisted.test.test_twisted',
    'twisted.test.test_udp',
    'twisted.test.test_unix',
    'twisted.test.test_usage',
    'twisted.test.testutils',
    'twisted.trial.*',
    'twisted.web.*',
    'twisted.words.*',
    'twisted.test.test_plugin',
    'twisted.internet.testing',
    'twisted.internet.test.test_base',
    'twisted.internet.protocol',
    'twisted.internet.posixbase',
]

[[tool.mypy.overrides]]
allow_untyped_defs = true
module = [
    'twisted.python._pydoctor',
    'twisted.python._release',
    'twisted.python._shellcomp',
    'twisted.python._textattributes',
    'twisted.python.compat',
    'twisted.python.components',
    'twisted.python.context',
    'twisted.python.deprecate',
    'twisted.python.fakepwd',
    'twisted.python.htmlizer',
    'twisted.python.lockfile',
    'twisted.python.log',
    'twisted.python.monkey',
    'twisted.python.procutils',
    'twisted.python.release',
    'twisted.python.roots',
    'twisted.python.shortcut',
    'twisted.python.syslog',
    'twisted.python.zippath',
    'twisted.runner.inetdtap',
    'twisted.runner.inetdconf',
]

[[tool.mypy.overrides]]
warn_return_any = false
module = [
    'twisted.conch.ssh.keys',
    'twisted.names._rfc1982',
    'twisted.names.dns',
    'twisted.words.protocols.jabber.jid',
]

[[tool.mypy.overrides]]
allow_untyped_defs = true
check_untyped_defs = false
warn_return_any = false
module = [
    'twisted.internet._sslverify',
    'twisted.internet.abstract',
    'twisted.internet.iocpreactor.tcp',
    'twisted.internet.tcp',
]

[[tool.mypy.overrides]]
allow_untyped_defs = false
module = [
    'twisted.web.test.test_flatten',
    'twisted.web.test.test_stan',
    'twisted.web.test.test_template',
    'twisted.web._element',
    'twisted.web._flatten',
    'twisted.web._stan',
    'twisted.web.template',
    'twisted.runner.test.test_procmontap',
    'twisted.runner.procmontap',
    'twisted.python.threadpool',
    'twisted._threads._pool',
    'twisted._threads._team',
    'twisted.python.test.test_zippath',
    'twisted.python.test.test_win32',
    'twisted.python.test.test_versions',
    'twisted.python.test.test_tzhelper',
    'twisted.python.test.test_textattributes',
    'twisted.python.test.test_runtime',
    'twisted.python.test.test_htmlizer',
    'twisted.application.test.test_service',
    'twisted.python.randbytes',
]
